# yt-history-analysis

./: CLAUDE.md  README.md  pyproject.toml  requirements.txt
docs/: planning-guidelines.md
docs/architecture/: ADR-001-database-schema-design.md  ADR-002-flask-framework-selection.md  ADR-003-server-side-rendering-strategy.md  ADR-004-analytics-layer-error-handling.md  ADR-005-get-based-url-filtering.md  ADR-006-rewatch-tracking-definition.md  ADR-007-jinja2-template-inheritance.md  ADR-008-d3js-integration-approach.md  ADR-template.md
docs/requirements/: developer.md  end_user.md  operator.md
scripts/: preview_data.sh  test_ingest.sh
session-logs/: 2025-11-09-184822-win-initial-claude-setup.md  2025-11-10-234500-win-requirements-gathering.md  2025-11-11-113220-win-v1-ingest-pipeline.md  2025-11-11-165800-fail-iteration1-planning.md  2025-11-11-165800-mixed-v1-iteration-1-analysis.md  2025-11-11-174352-mixed-iteration1-overview-ui.md  2025-11-12-172402-mixed-iteration2-phase1-execute-analytics.md  2025-11-12-181417-win-iteration2-phase2-execution.md  2025-11-12-194200-win-iteration2-analysis.md  2025-11-12-204200-win-iteration2-planning.md  2025-11-12-224500-win-iteration2-complete-execution.md  2025-11-16-114230-win-v1-iteration3-analysis.md  2025-11-16-125215-win-iteration3-phase1-analytics.md  2025-11-16-142000-win-v1-iteration3-planning.md  2025-11-16-154900-win-iteration3-monthly-temporal.md
src/: constants.py
src/analytics/: queries.py
src/api/: app.py
src/db/: schema.py
src/ingest/: parsers.py  pipeline.py
tests/fixtures/: analytics_sample.json  (+2 more)
(+30 files in other folders)
