[project]
name = "yt-history-analysis"
version = "0.1.0"
description = "Local-only YouTube watch history analysis tool"
requires-python = ">=3.9"
dependencies = [
    "flask>=2.0,<4.0",
    "jinja2>=3.0,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<9.0",
    "black>=22.0,<25.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
]

[tool.black]
line-length = 88
target-version = ["py39"]
